# scrapy_acquaintance

./: authors.json  main.py  models.py  pyproject.toml  seed.py
